<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_image_home"
        android:title="@string/home" />
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/home_image_search"
        android:title="@string/search" />

    <item
        android:id="@+id/comingSoonFragment"
        android:icon="@drawable/home_image_coming_soon"
        android:title="@string/search" />

    <item
        android:id="@+id/downloadFragment"
        android:icon="@drawable/home_image_download"
        android:title="@string/downloads" />

    <item
        android:id="@+id/moreFragment"
        android:icon="@drawable/home_image_more"
        android:title="@string/more" />
</menu>