<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".presentation.ui.UserFragment">

        <ImageView
            android:id="@+id/userImageNetflix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_13sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logos_netflix" />

        <Button
            android:id="@+id/userButtonEmenalo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="100dp"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/started_blue_icon"
            android:text="@string/emenalo"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userImageNetflix" />

        <Button
            android:id="@+id/userButtonOnyeka"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/started_yellow_icon"
            android:text="@string/onyeka"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/userButtonEmenalo" />

        <Button
            android:id="@+id/userButtonThelma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/started_red_icon"
            android:text="@string/thelma"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@+id/userButtonEmenalo"
            app:layout_constraintStart_toStartOf="@+id/userButtonEmenalo"
            app:layout_constraintTop_toBottomOf="@+id/userButtonEmenalo" />

        <Button
            android:id="@+id/userButtonKids"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/started_kids_icon"
            android:text="@string/kids"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@+id/userButtonOnyeka"
            app:layout_constraintStart_toStartOf="@+id/userButtonOnyeka"
            app:layout_constraintTop_toBottomOf="@+id/userButtonOnyeka" />

        <Button
            android:id="@+id/userButtonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_started_add_button"
            android:text="@string/add_profile"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@+id/userButtonThelma"
            app:layout_constraintStart_toStartOf="@+id/userButtonThelma"
            app:layout_constraintTop_toBottomOf="@+id/userButtonThelma" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>